--- a/style.css
+++ b/style.css
@@ -36,7 +36,8 @@ body * {
 
 
 #container {
-    width: 360px;
+    width: 100%;
+    max-width: 588px;
     margin: 56px auto 0px;
     padding: 0 24px;
 }
@@ -143,6 +144,7 @@ ul li a:hover {
 
     transition: background 0.2s;
     border-radius: 50%;
+
 }
 
 #social-links a:hover {
