--- a/style.css
+++ b/style.css
@@ -161,7 +161,7 @@ footer {
 @media (min-width: 700px) {
     :root {
         --bg-url: url(./assets/bg-desktop.jpg)
-    };
+    }
 
     .light {
         --bg-url: url(./assets/bg-desktop-light.jpg)
