--- a/style.css
+++ b/style.css
@@ -79,11 +79,12 @@ body * {
     left: 0;
     transform: translateY(-50%);
     z-index: 1;
+
+    animation: slide-out .4s forwards;
 }
 
 .light #switch button{
-    right: 0;
-    left: inherit;
+    animation: slide-in .4s forwards;
 }
 
 #switch span{
@@ -165,5 +166,25 @@ footer {
 
     .light {
         --bg-url: url(./assets/bg-desktop-light.jpg)
+    }
+}
+
+@keyframes slide-in {
+    from {
+        left: 0;
+    }
+        
+    to {
+        left: 50%;
+    }
+}
+
+@keyframes slide-out {
+    from {
+        left: 50%;
+    }
+
+    to {
+        left: 0;
     }
 }
