--- a/style.css
+++ b/style.css
@@ -87,6 +87,11 @@ body * {
     animation: slide-in .4s forwards;
 }
 
+#switch button:hover {
+    outline: 8px solid var(--highlight-color);
+    transition: .1s;
+}
+
 #switch span{
     display: block;
     width: 64px;
